--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "highlight.js": "^9.15.10",
     "shiroui": "^0.4.12",
     "vue": "^2.5.2",
+    "vue-drag-resize": "^1.4.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
