--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@hellowuxin/mindmap": "^1.10.1",
     "flyio": "^0.6.14",
     "highlight.js": "^9.15.10",
     "shiroui": "^0.4.12",
