--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "@hellowuxin/mindmap": "^1.10.1",
+    "d3-flextree": "^2.1.1",
     "flyio": "^0.6.14",
     "highlight.js": "^9.15.10",
-    "shiroui": "^0.4.12",
+    "shiroui": "^0.5.0",
     "vue": "^2.5.2",
     "vue-drag-resize": "^1.4.1",
     "vue-router": "^3.0.1"
